crates/sgf-core/tests/snapshots/scenario_paint/clear_7_modifier_refused.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
system 7: spawn_weight carries modifiers this editor does not rewrite; edit the block by hand at byte 190
