crates/sgf-core/tests/snapshots/scenario_paint/script_1_reserved_c.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Made system 1 a Paint a Galaxy spawn (reserved c)
inverse: SetSpawnScript { system: 1, script: Some(PaintAGalaxy { kind: Preferred, random_value: 1, player: false }) }

--- scenario
+++ scenario
@@ -32,7 +32,7 @@
 	marauder_empire_default = 1
 	crisis_strength = 0.5
 	system = { id = "0" position = { x = 0 y = 120 } name = "Alpha" initializer = random_empire_init_01 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RANDOM_MODULO|10|RANDOM_VALUE|3| } }
-	system = { id = "1" position = { x = 110 y = 40 } name = "Beta" initializer = random_empire_init_02 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|PREFERRED|yes|RANDOM_MODULO|10|RANDOM_VALUE|1| } }
+	system = { id = "1" position = { x = 110 y = 40 } name = "Beta" initializer = random_empire_init_02 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RESERVED|c|RANDOM_MODULO|3|RANDOM_VALUE|1| } }
 	system = { id = "2" position = { x = 70 y = -100 } name = "Gamma" initializer = random_empire_init_03 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RESERVED|a|RANDOM_MODULO|3|RANDOM_VALUE|2| } }
 	system = { id = "3" position = { x = -70 y = -100 } name = "Sol" initializer = sol_system_initializer spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|SOL|yes|RANDOM_MODULO|1|RANDOM_VALUE|0| } }
 	system = { id = "4" position = { x = -110 y = 40 } name = "Delta" initializer = custom_starting_init_01 effect = { set_star_flag = painted_galaxy_custom_initializer } }
